add Pokemon TM