@@ -221,7 +221,8 @@ public class NumberDisplayBaseChooser extends JCheckBox {
         if (base == NumberDisplayBaseChooser.HEXADECIMAL) {
             return Binary.intToHexString(value);
         } else {
-            return new Integer(value).toString();
+            Integer integer = Integer.valueOf(value);
+            return integer.toString();
         }
     }
 
